fixed blog sidebar on mobile

--- a/css/mobileLandscape.css
+++ b/css/mobileLandscape.css
@@ -25,7 +25,7 @@ header {
 }
 
 .panel.blogSidebar {
-	opacity:0;
+	right:-200px;
 }
 
 .panel, .workDisplay {
