--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,8 @@ list-style: none;
 		margin-left:auto;
 		background-color:rgba(243, 240, 240, 1);
 		box-shadow: 0px 0px 10px rgba(0, 94, 101, .8);
+		-webkit-transition: all 600ms cubic-bezier(0.77, 0, 0.175, 1);
+	  	transition:         all 600ms cubic-bezier(0.77, 0, 0.175, 1);
 	}
 
 	.workDisplay {
